# rust-calculator

./: .gitignore  Cargo.toml  README.md  lcov.info
.clinerules/: 01-general-principles.md  02-code-style.md  03-rust-best-practices.md  05-security-guidelines.md  06-github-workflow.md  07-cline-integration.md  08-dependency-ci-docs.md  code-principles.md  issue-creation.md  security-guidelines.md  testing-coverage.md
.github/ISSUE_TEMPLATE/: story-template.md
.github/workflows/: rust.yml
src/: calculator.rs  display.rs  input.rs  lib.rs  main.rs  ui.rs
tests/: calculator_tests.rs  display_tests.rs  input_tests.rs  keyboard_tests.rs  ui_tests.rs
